testsuite/tests/partial-sigs/should_fail/ExtraConstraintsWildcardInTypeSplice2.stderr

ExtraConstraintsWildcardInTypeSplice2.hs:6:12: error:
    Unexpected wild card: ‘_’
    In the type signature for ‘show'’: show' :: (_) => a -> String
